[package]
name = "sp-allocator"
version = "4.1.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Collection of allocator implementations."
documentation = "https://docs.rs/sc-allocator"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }
thiserror = { version = "1.0.30", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
sp-wasm-interface-common = { version = "7.0.0", path = "../wasm-interface-common", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "log/std", "sp-wasm-interface-common/std", "thiserror" ]
