[package]
name = "gp-externalities"
version = "0.13.0"
license = "Apache-2.0"
authors = ["Gear Technologies", "Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear/"
description = "Substrate externalities abstraction"
documentation = "https://docs.rs/gp-externalities"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
environmental = { version = "1.1.3", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
sp-storage = { version = "7.0.0", default-features = false, path = "../storage" }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"sp-std/std",
	"sp-storage/std",
]
