[package]
name = "gp-runtime-interface"
version = "7.0.1"
authors = ["Gear Technologies", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear/"
description = "Substrate runtime interface"
documentation = "https://docs.rs/gp-runtime-interface/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = { version = "1.1.0", default-features = false }
sp-wasm-interface = { version = "7.0.0", path = "../wasm-interface", default-features = false }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
sp-tracing = { version = "6.0.0", default-features = false, path = "../tracing" }
sp-runtime-interface-proc-macro = { version = "6.0.0", path = "proc-macro", package = "gp-runtime-interface-proc-macro" }
sp-externalities = { version = "0.13.0", default-features = false, path = "../externalities", package = "gp-externalities" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["bytes"] }
static_assertions = "1.0.0"
primitive-types = { version = "0.12.0", default-features = false }
sp-storage = { version = "7.0.0", default-features = false, path = "../storage" }
impl-trait-for-tuples = "0.2.2"

[dev-dependencies]
sp-runtime-interface-test-wasm = { version = "2.0.0", path = "test-wasm" }
sp-state-machine = { version = "0.13.0", path = "../state-machine" }
sp-core = { version = "7.0.0", path = "../core" }
sp-io = { version = "7.0.0", path = "../io" }
rustversion = "1.0.6"
trybuild = "1.0.74"

[features]
default = [ "std" ]
std = [
	"sp-storage/std",
	"bytes/std",
	"sp-wasm-interface/std",
	"sp-std/std",
	"sp-tracing/std",
	"codec/std",
	"sp-externalities/std",
	"primitive-types/std",
]

# ATTENTION
#
# Only use when you know what you are doing.
#
# Disables static assertions in `impls.rs` that checks the word size. To prevent any footgun, the
# check is changed into a runtime check.
disable_target_static_assertions = []
