[package]
name = "sp-wasm-interface-common"
version = "15.0.0"
authors = ["Gear Technologies", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear"
description = "Types and traits for interfacing between the host and the wasm runtime."
documentation = "https://docs.rs/sp-wasm-interface-common"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
wasmi = { git = "https://github.com/gear-tech/wasmi", branch = "v0.13.2-sign-ext", default-features = false, optional = true, version = "0.13.2" }
sp-std = { version = "9.0.0", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "sp-std/std", "wasmi/std" ]
