[package]
name = "sp-wasm-interface"
version = "7.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Types and traits for interfacing between the host and the wasm runtime."
documentation = "https://docs.rs/sp-wasm-interface"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", optional = true }
wasmtime = { version = "8.0.1", default-features = false, optional = true }
anyhow = { version = "1.0.68", optional = true }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
sp-wasm-interface-common = { version = "7.0.0", path = "../wasm-interface-common", default-features = false }
sp-allocator = { version = "4.1.0-dev", path = "../allocator", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "log", "sp-allocator/std", "sp-std/std", "sp-wasm-interface-common/std", "wasmtime" ]
wasmtime = [ "dep:wasmtime", "anyhow" ]
wasmi = [ "sp-wasm-interface-common/wasmi" ]
