[package]
name = "gp-wasm-interface"
version = "7.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Gear Technologies"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/substrate/"
description = "Types and traits for interfacing between the host and the wasm runtime."
documentation = "https://docs.rs/gp-wasm-interface"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", optional = true }
wasmtime = { version = "6.0.1", default-features = false, optional = true }
anyhow = { version = "1.0.68", optional = true }
sp-std = { version = "5.0.0", default-features = false, path = "../std" }
sp-wasm-interface-common = { version = "7.0.0", path = "../wasm-interface-common", default-features = false, package = "gp-wasm-interface-common" }
sp-allocator = { version = "4.1.0", path = "../allocator", default-features = false, package = "gp-allocator" }

[features]
default = [ "std" ]
std = [ "codec/std", "log", "sp-allocator/std", "sp-std/std", "sp-wasm-interface-common/std", "wasmtime" ]
wasmtime = [ "dep:wasmtime", "anyhow" ]
wasmi = [ "sp-wasm-interface-common/wasmi" ]
