[package]
name = "gp-runtime-interface-proc-macro"
version = "12.0.0"
authors = ["Gear Technologies", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/substrate/"
description = "This crate provides procedural macros for usage within the context of the Substrate runtime interface."
documentation = "https://docs.rs/gp-runtime-interface-proc-macro"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro-crate = "1.1.3"
proc-macro2 = "1.0.56"
quote = "1.0.28"
syn = { version = "2.0.16", features = ["full", "visit", "fold", "extra-traits"] }
